cabal-version:      2.4
name:               Simple
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Chester Gould
maintainer:         chestergould@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Simple
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
    	AST,
    	AST.Types,
    	TAST.Types,
    	Compiler.Types,
    	Lambda.Types,
    	Pred.Types,
    	CPS.Types,
    	CPSClosure.Types,
    	CPSAsm.Types,
    	CPSFree.Types,
    	CPSRegisters.Types,
    	S64.Types

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
    	base ^>=4.14.1.0,
    	ordered-containers
    hs-source-dirs:   src
    default-language: Haskell2010
