cabal-version:      2.4
name:               Simple
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Chester Gould
maintainer:         chestergould@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Simple
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
    	AST,
    	AST.Check,
    	AST.Parse,
    	AST.TypeCheck,
    	AST.Types,
    	TAST,
    	TAST.Lower,
    	TAST.Types,
    	Compiler.Gensym,
    	Compiler.Types,
    	Lambda,
    	Lambda.Lower,
    	Lambda.PrettyPrint,
    	Lambda.Types,
    	Pred,
    	Pred.Lower,
    	Pred.PrettyPrint,
    	Pred.Types,
    	CPS,
    	CPS.PrettyPrint,
    	CPS.Types,
    	CPSClosure.Types,
    	CPSAsm.Types,
    	CPSFree.Types,
    	CPSRegisters.Types,
    	S64.Types

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
    	base ^>=4.14.1.0,
    	containers,
    	ordered-containers,
    	megaparsec,
    	mtl,
    	pretty-simple
    hs-source-dirs:   src
    default-language: Haskell2010
